[package]
name = "pax-engine"
version = "0.36.2"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>", "Samuel Selleck <samuel@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Root import entry-point for using Pax in a Rust program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pax-macro = {path="../pax-macro", version="0.36.2"}
pax-manifest = {path="../pax-manifest", version="0.36.2"}
pax-message = {path="../pax-message", version="0.36.2"}
pax-runtime = {path="../pax-runtime", version="0.36.2"}
pax-lang = {path="../pax-lang", version="0.36.2"}
pax-chassis-web = {version = "0.36.2", path="../pax-chassis-web", optional=true }
pax-chassis-macos = {version = "0.36.2", path="../pax-chassis-macos", optional=true }
pax-chassis-ios = {version = "0.36.2", path="../pax-chassis-ios", optional=true }
pax-chassis-common = {version = "0.36.2", path="../pax-chassis-common", optional=true }
pax-designtime = {version = "0.36.2", path = "../pax-designtime", optional=true}
console_log = {version = "1.0.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
serde_json = {version = "1.0.95"}
wasm-bindgen = {version = "0.2.92", optional=true}
wasm-bindgen-futures = {version = "0.4.42", optional=true}
log = "0.4.20"

[features]
designtime = ["dep:pax-designtime", "pax-runtime/designtime", "pax-chassis-web?/designtime", "pax-chassis-macos?/designtime", "pax-chassis-ios?/designtime", "pax-macro/designtime"]
web = ["dep:pax-chassis-web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
macos = ["dep:pax-chassis-macos", "dep:pax-chassis-common"]
ios = ["dep:pax-chassis-ios", "dep:pax-chassis-common"]
