[package]
name = "pax-example"
version = "0.5.9"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Example and development app for the Pax monorepo and compiler"

[dependencies]
pax-lang = {path = "../pax-lang", version="0.5.9"}
pax-std = {path = "../pax-std", version="0.5.9"}
serde_json = {version = "1.0.95", optional = true}
pax-compiler = {path="../pax-compiler", optional=true,version = "0.5.9"}
pax-message = {path = "../pax-message", version="0.5.9"}


[features]
parser = ["pax-std/parser", "pax-lang/parser", "dep:serde_json", "dep:pax-compiler"]

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser"]