[package]
name = "pax-example"
version = "0.9.6"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "Example and development app for the Pax monorepo and compiler"

[dependencies]
pax-lang = { version="0.9.6", path=".pax/pkg/pax-lang" }
pax-std = { version="0.9.6", path=".pax/pkg/pax-std" }
pax-compiler = {version = "0.9.6", path=".pax/pkg/pax-compiler", optional = true}
serde_json = {version = "1.0.95", optional = true}

[features]
parser = ["pax-std/parser", "pax-lang/parser", "dep:serde_json", "dep:pax-compiler"]

[[bin]]
name = "parser"
path = "src/lib.rs"
required-features = ["parser"]