[package]
name = "pax-generation"
version = "0.38.3"
edition = "2021"
description = "Tools for generating Pax with LLMs"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1.5"
dotenv = "0.15"
pax-lang = {version = "0.38.3", path="../pax-lang"}
pax-message = {version = "0.38.3", path="../pax-message"}
futures = "0.3.30"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"