[package]
name = "pax-kit"
version = "0.24.0"
edition = "2021"

[dependencies]
pax-engine = { path = "../pax-engine", version = "0.24.0"}
pax-designer = { path = "../pax-designer", version = "0.24.0", optional=true }
pax-std = { path = "../pax-std", version = "0.24.0" }

[features]
default = ["web"]
designer = ["dep:pax-designer", "pax-engine/designtime", "pax-designer?/designtime", "pax-std/designtime"]
parser = ["pax-std/parser", "pax-designer?/parser"]
web = ["pax-engine/web"]
ios = ["pax-engine/ios"]
macos = ["pax-engine/macos"]

[profile.release]
lto = true
opt-level = "z"
