[package]
name = "pax-kit"
version = "0.28.0"
edition = "2021"
authors = ["Zack Brown <zack@pax.dev>","Warfa Jibril <warfa@pax.dev>", "Samuel Selleck <samuel@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Main entrypoint for building with Pax"

[dependencies]
pax-engine = { path = "../pax-engine", version = "0.28.0"}
pax-designer = { path = "../pax-designer", version = "0.28.0", optional=true }
pax-std = { path = "../pax-std", version = "0.28.0" }

[features]
default = ["web"]
designer = ["dep:pax-designer", "pax-engine/designtime", "pax-designer?/designtime", "pax-std/designtime"]
parser = ["pax-std/parser", "pax-designer?/parser"]
web = ["pax-engine/web"]
ios = ["pax-engine/ios"]
macos = ["pax-engine/macos"]

[profile.release]
lto = true
opt-level = "z"
