[package]
name = "pax-lang"
version = "0.15.3"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Pax language parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = {version = "2.7.10", features = ["std"]}
pest_derive = {version = "2.7.10", features = ["std"]}

