[package]
name = "pax-lang"
version = "0.38.1"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Pax language parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = {version = "2.7.10", features = ["std"]}
pest_derive = {version = "2.7.10", features = ["std"]}
serde = { version="1.0.95", features=["derive"]}
pax-runtime-api = {path="../pax-runtime-api", version="0.38.1"}
log = "0.4.20"
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
color-eyre = "0.6.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[profile.dev]
debug = false
