[package]
name = "pax-language-server"
version = "0.14.0"
authors = ["Warfa Jibril <warfa@pax.dev>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Language Server for Pax Language"
edition = "2021"


[dependencies]
dashmap = "5.5.3"
lsp-types = { version =  "0.94.1", features = ["proposed"] }
serde = { version = "1.0.188", features = ["derive"] }
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.33"
pax-compiler = {version = "0.14.0", path="../pax-compiler"}
pest = "2.7.4"
pest_derive = "2.7.4"
phf = { version = "0.11.2", features=["macros"] }
once_cell = "1.18.0"
lazy_static = "1.4.0"
ropey = "1.6.0"
regex = "1.10.1"
