[package]
name = "pax-macro"
version = "0.0.1"
authors = ["Zack Brown <zack@pax-lang.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features=["derive"]}
proc-macro2 = "1.0"
quote = "1.0"
pax-compiler = {path="../pax-compiler"}
