[package]
name = "pax-manifest"
version = "0.15.5"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Definition container for an entire Pax cartridge"

[features]
parsing = []

[lib]

[dependencies]
serde = { version="1.0.95", features=["derive"]}
pax-message = {path="../pax-message", version="0.15.5"}
pax-runtime-api = {path="../pax-runtime-api", version="0.15.5"}
pax-lang = {version = "0.15.5", path="../pax-lang"}
serde_with = { version= "3.6.1", features = ["json"]} 
log = "0.4.20"
