[package]
name = "pax-manifest"
version = "0.38.3"
authors = ["Zack Brown <zack@pax.dev>", "Warfa Jibril <warfa@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Definition container for an entire Pax cartridge"

[features]
parsing = []

[lib]

[dependencies]
pax-message = {path="../pax-message", version="0.38.3"}
pax-runtime-api = {path="../pax-runtime-api", version="0.38.3"}
pax-lang = {version = "0.38.3", path="../pax-lang"}
kurbo = "0.11.1"
log = "0.4.20"
colored = "2.0.0"
include_dir = {version = "0.7.3", features = ["glob"]}
similar = "2.2.1"
serde = { version = "1.0.159", features=["derive"] }
serde_derive = "1.0.159"
serde_with = { version= "3.6.1", features = ["json"]} 
serde_json = { version = "1.0.95"}
syn = { version = "1.0", features = ["full", "parsing", "visit"] }
tera = "1"
html-escape = "0.2.13"
