[package]
name = "pax-message"
version = "0.0.1"
edition = "2021"
authors = ["Zack Brown <zack@pax.rs>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.rs/"
repository = "https://www.github.com/pax-lang/pax"
description = "Shared message structs used by Pax runtimes"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.159", features=["derive"] }
serde_json = "1.0.95"
wasm-bindgen = {version = "0.2.80", features=["serde-serialize"]}