[package]
name = "pax-paxel-interpreter"
version = "0.21.1"
authors = ["Warfa Jibril <warfa@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/paxproject/pax"
description = "Paxel Interpreter"

[dependencies]
pax-lang = {version = "0.21.1", path="../pax-lang"}
pax-runtime-api = {version = "0.21.1", path="../pax-runtime-api"}