[package]
name = "pax-pixels"
version = "0.10.7"
edition = "2021"
authors = ["Samuel Selleck <sellecksamuel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "WGPU rendering library for the pax framework"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pax-runtime-api = {path = "../pax-runtime-api", version="0.38.1"}
log = "0.4.20"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
lyon = "1.0.1"
winit = "0.27.5"
web-sys = "0.3.64"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.38"

[
dependencies.wgpu
]
version = "22.1.0"
features = [
    "webgpu",     # Required for WebGPU support
    "webgl",      # Optional: for WebGL fallback
]
