[package]
name = "pax-runtime-api"
version = "0.9.11"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "API exposed by the Pax runtime, for runtime manipulation of Pax programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo = "0.9.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
uuid = {version = "0.8", features = ["v4", "wasm-bindgen"]}
pax-message = {version="0.9.11", path="../pax-message"}
