[package]
name = "pax-runtime-api"
version = "0.11.5"
authors = ["Zack Brown <zack@pax.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://pax.dev/"
repository = "https://www.github.com/pax-lang/pax"
description = "API exposed by the Pax runtime, for runtime manipulation of Pax programs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet = "0.6.0"
piet-common = "0.6.0"
kurbo = "0.9.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
uuid = {version = "0.8", features = ["v4", "wasm-bindgen"]}
pax-message = {version="0.11.5", path="../pax-message"}
serde = {version="1.0.196", features=["derive"]}

